changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Changes to the way the server handles quests:
Rather than a separate end_quest() function, quest steps may contain the
line 'finishes_quest' advancing to any step that contains that line finishes
the quest. All references to end_quest are removed.
The stage number for completed, unrestartable quests is preserved, and the
step description (called 'outcome') is shown for completed quests also.
The quest list command output is reworked, it defaults to showing the number
of completed quests, and listing the active ones, but 'quest list all' can
be used to show all of the quests whether completed or not.
plugins/cf_darcap/cf_darcap.c 
plugins/common/include/plugin_common.h
plugins/common/plugin_common.c
plugins/cfpython/cfpython_object.c
plugins/cfpython/include/cfpython_object_private.h
include/plugin.h
server/quest.c
server/plugins.c
Brendan Lally 2010-03-29

Replace the numbers in the map2 command handling with some #define's
 include/shared/newclient.h
 socket/request.c
Brendan Lally 2010-03-28

Don't drop the inventory of items marked as 'no drop'
 common/object.c
Brendan Lally 2010-03-28

Massive CRE improvements.
Filters are now defined globally. Report window, to display things (will be improved soon).
Nicolas Weeger 2010-03-27

Don't list invisible items as part of the contents of chests when applied.
 types/treasure/treasure.c
Brendan Lally 2010-03-26

Town portal now has an animation instead of being immediate.
 server/spell_effect.c
Nicolas Weeger 2010-03-25

Have disappearing FLAG_IS_USED_UP items put their inventory on the ground, not on pile top.
 server/time.c