@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add a patch written by Funnyman3595 to add Object.Split and Object.Clone to 
+the methods which can be used by python scripts through the plugin.
+plugins/cfpython/include/cfpython_object_private.h
+server/plugins.c
+plugins/cfpython/cfpython_object.c
+plugins/common/plugin_common.c
+Brendan Lally 2010-03-30
+
 Changes to the way the server handles quests:
 Rather than a separate end_quest() function, quest steps may contain the
 line 'finishes_quest' advancing to any step that contains that line finishes
